Added links to footer

--- a/index.html
+++ b/index.html
@@ -9,7 +9,14 @@
   <body>
     <h1>Hello</h1>
     <footer>
-      Coded with 🧡 by Gwen Munoz, open-sourced in Github and hosted in Netlify.
+      Coded with 🧡 by
+      <a href="https://github.com/GwenCodes" target="_blank">Gwen Munoz</a>,
+      open-sourced in Github and hosted in
+      <a
+        href="https://shecodes-world-clock-gmunoz.netlify.app/"
+        target="_blank">
+        Netlify</a
+      >.
     </footer>
     <script src="javascript/index.js"></script>
   </body>
