Added container, select (elements) and city (variables)

--- a/index.html
+++ b/index.html
@@ -7,17 +7,39 @@
     <title>World Clock Project</title>
   </head>
   <body>
-    <h1>Hello</h1>
-    <footer>
-      Coded with 🧡 by
-      <a href="https://github.com/GwenCodes" target="_blank">Gwen Munoz</a>,
-      open-sourced in Github and hosted in
-      <a
-        href="https://shecodes-world-clock-gmunoz.netlify.app/"
-        target="_blank">
-        Netlify</a
-      >.
-    </footer>
+    <div class="container">
+      <h1>World Clock</h1>
+
+      <select name="" id="">
+        <option value="">Select a city</option>
+        <option value="">New York</option>
+        <option value="San Francisco"></option>
+        <option value="">Cebu</option>
+      </select>
+
+      <div class="city">
+        <h2>Los Angeles</h2>
+        <div class="date">July 21, 2025</div>
+        <div class="time">4:08 PM</div>
+      </div>
+
+      <div class="city">
+        <h2>Las Vegas</h2>
+        <div class="date">July 21, 2025</div>
+        <div class="time">4:08 PM</div>
+      </div>
+
+      <footer>
+        Coded with 🧡 by
+        <a href="https://github.com/GwenCodes" target="_blank">Gwen Munoz</a>,
+        open-sourced in Github and hosted in
+        <a
+          href="https://shecodes-world-clock-gmunoz.netlify.app/"
+          target="_blank">
+          Netlify</a
+        >.
+      </footer>
+    </div>
     <script src="javascript/index.js"></script>
   </body>
 </html>
