--- a/index.html
+++ b/index.html
@@ -12,26 +12,27 @@
     <div class="container">
       <h1>World Clock</h1>
 
-      <select name="" id="">
+      <select name="" id="city">
         <option value="">Select a city</option>
-        <option value="">New York</option>
-        <option value="">San Francisco</option>
-        <option value="">Cebu</option>
+        <option value="Europe/London">London</option>
+        <option value="America/New_York">New York</option>
+        <option value="Pacific/Auckland">Aukland</option>
       </select>
-
-      <div class="city" id="los-angeles">
-        <div>
-          <h2>Los Angeles</h2>
-          <div class="date"></div>
+      <div id="cities">
+        <div class="city" id="los-angeles">
+          <div>
+            <h2>Los Angeles</h2>
+            <div class="date"></div>
+          </div>
+          <div class="time"><small></small></div>
         </div>
-        <div class="time"><small></small></div>
-      </div>
-      <div class="city" id="cebu">
-        <div>
-          <h2>Cebu</h2>
-          <div class="date"></div>
+        <div class="city" id="cebu">
+          <div>
+            <h2>Cebu</h2>
+            <div class="date"></div>
+          </div>
+          <div class="time"><small></small></div>
         </div>
-        <div class="time"><small></small></div>
       </div>
     </div>
     <script src="javascript/index.js"></script>
