--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
       <select name="" id="city">
         <option value="">Select a city</option>
-        <option value="current">Current location</option>
+        <option value="current">My current location</option>
         <option value="Europe/London">London</option>
         <option value="America/New_York">New York</option>
         <option value="Pacific/Auckland">Aukland</option>
@@ -27,9 +27,18 @@
           </div>
           <div class="time"><small></small></div>
         </div>
+
         <div class="city" id="cebu">
           <div>
             <h2>Cebu</h2>
+            <div class="date"></div>
+          </div>
+          <div class="time"><small></small></div>
+        </div>
+
+        <div class="city" id="cape-town">
+          <div>
+            <h2>Cape Town</h2>
             <div class="date"></div>
           </div>
           <div class="time"><small></small></div>
@@ -40,8 +49,9 @@
   </body>
   <footer>
     Coded with 🧡 by
-    <a href="https://github.com/GwenCodes" target="_blank">Gwen Munoz</a>,
-    open-sourced in Github and hosted in
+    <a href="https://github.com/GwenCodes" target="_blank"
+      ><strong>Gwen Munoz</strong></a
+    >, open-sourced in Github and hosted in
     <a href="https://shecodes-world-clock-gmunoz.netlify.app/" target="_blank">
       Netlify</a
     >.
